--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.8.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.13",
@@ -20,6 +21,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@rainbow-me/rainbowkit": "^2.2.0",
+    "@snapshot-labs/snapshot.js": "^0.12.62",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.9.0",
@@ -55,8 +57,8 @@
     "@types/react": "19.1.4",
     "@types/react-dom": "19.1.5",
     "eslint": "^8",
-    "eslint-plugin-storybook": "^0.12.0",
     "eslint-config-next": "15.3.2",
+    "eslint-plugin-storybook": "^0.12.0",
     "jest": "^29.7.0",
     "playwright": "^1.52.0",
     "postcss": "^8",
